--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "antd": "^5.25.4",
+    "i18next": "^25.2.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-awesome-reveal": "^4.3.1",
+    "react-dom": "^19.1.0",
+    "react-i18next": "^11.18.6",
+    "react-router-dom": "^7.6.1",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
