--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
     "react-i18next": "^11.18.6",
-    "react-router-dom": "^7.6.1",
+    "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/node": "^22.15.30",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
